--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,19 +1,182 @@
+:root {
+  --title-text: #3a3a3a;
+  --ratings-text: #5e6366;
+  --card-title: #18191f;
+  --color-price: rgba(0, 0, 0, 0.87);
+  --card-bottom-text: #787885;
+  --color-button: #e02c6d;
+  --color-bg-footer: #0a0826;
+  --color-ratings: #fb8200;
+  --white: #fff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 /* ......... Header Section Start ........ */
 
+header {
+  margin-bottom: 100px;
+}
+/*----- Nave Menu -------*/
+.nav-container {
+  position: relative;
+}
+.nav-manu {
+  margin-top: 5.5rem;
+  color: var(--title-text);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-icon {
+  display: none;
+  /* z-index: 2; */
+}
+.menu-icon > a > span {
+  color: var(--title-text);
+  padding-top: 5px;
+}
+.nav-bar > li > span,
+.menu-icon > span,
+.secound-cart-icon > span {
+  font-size: 2rem;
+  font-weight: 400;
+}
+.secound-cart-icon {
+  display: none;
+}
+.secound-cart-icon > span {
+  padding-top: 6px;
+}
+.logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 
+.nav-bar {
+  flex: 0 0 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-bar > li, .nav-bar2 > li {
+  list-style: none;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.search-cart-icon {
+  padding-top: 7px;
+}
+.nav-bar2nd {
+  display: none;
+  padding-top: 50px;
+  width: 100px;
+  background-color: transparent;
+  position: absolute;
+  top: -0px;
+  left: -10px;
+}
+.nav-bar2 {
+  padding: 10px;
+}
+
+/*------- Banner --------- */
+.banner-container {
+  margin: 3.5rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner-content {
+  max-width: 582px;
+  flex: 0 0 45%;
+}
+.banner-title {
+  color: var(--title-text);
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 70px;
+  margin-bottom: 1rem;
+}
+.banner-description {
+  color: var(--card-bottom-text);
+  max-width: 500px;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.button-banner > a {
+  text-decoration: none;
+}
+
+.btn-praimary {
+  color: var(--white);
+  background-color: var(--color-button);
+  font-size: 1rem;
+  font-weight: 700;
+  border: none;
+  border-radius: 3rem;
+  width: 12.25rem;
+  height: 2.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn-praimary > span {
+  margin-left: 0.5rem;
+}
+
+.banner-image-container {
+  height: 500px;
+  flex: 00 50%;
+  background-image: url("../images/Circle\ design.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-image-container > img {
+  margin-right: 40px;
+}
+
+/*------ Sponsors ------ */
+header hr {
+  border: 1px transparent;
+  background: linear-gradient(
+    135deg,
+    rgba(192, 204, 218, 0.1) 0%,
+    rgba(192, 204, 218, 0.6) 50.38%,
+    rgba(192, 204, 218, 0.1) 100%
+  );
+  height: 1px;
+}
+.sponsor-container {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
 /* ......... Header Section End ........ */
 
 /* ......... Main/Body-Contents Section Start ........ */
 
-
-
 /* ......... Main/Body-Contents Section End ........ */
 
-
 /* ......... Footer Section Start ........ */
-
-
-
 
 /* ......... Footer Section End ........ */
